RESOLVED FIXED 273651
Clear text indicator styles when they are no longer needed
https://bugs.webkit.org/show_bug.cgi?id=273651
Summary Clear text indicator styles when they are no longer needed
Aditya Keerthi
Reported 2024-05-02 15:55:27 PDT
Attachments
Aditya Keerthi
Comment 1 2024-05-02 16:01:44 PDT
Aditya Keerthi
Comment 2 2024-05-02 16:09:21 PDT
EWS
Comment 3 2024-05-02 18:54:31 PDT
Committed 278296@main (f2a9b394f0e3): <https://commits.webkit.org/278296@main> Reviewed commits have been landed. Closing PR #28068 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.