Clear text indicator styles when they are no longer needed https://bugs.webkit.org/show_bug.cgi?id=273651 rdar://127334566

Reviewed by Abrar Rahman Protyasha, Megan Gardner and Wenson Hsieh.

* Source/WebKit/WebProcess/WebPage/Cocoa/UnifiedTextReplacementController.mm:
(WebKit::UnifiedTextReplacementController::didEndTextReplacementSession):

Canonical link: https://commits.webkit.org/278296@main